--- a/a_Coursera_NYU_D3_Assignment/index.html
+++ b/a_Coursera_NYU_D3_Assignment/index.html
@@ -1,33 +1,33 @@
 <html>
 
-  
+
 <head>
   <style>
-  body {
-    font-family: Helvetica, Arial, sans-serif
-  }
+    body {
+      font-family: Helvetica, Arial, sans-serif
+    }
 
-  h1 {
-    background-color: #2a5599;
-    /* TODO 1
+    h1 {
+      background-color: #2a5599;
+      /* TODO 1
     change the text to white and add a padding of 5px
     2 lines of code
     */
-    color: white;
-    padding: 5px;
-  }
+      color: white;
+      padding: 5px;
+    }
 
-  /* TODO 2
+    /* TODO 2
   Add code to show a black border of 1px around all SVGs elements in the page
   1-3 lines of code
   */
-  /* TODO 3
+    /* TODO 3
   - Use the "display flex" feature from to show the items from class `mainView` side by side
   1-3 lines of cide
   */
-  .mainView {
-    display: flex;
-  }
+    .mainView {
+      display: flex;
+    }
   </style>
   <script src="d3.js"></script> <!-- Add this line to your file -->
 
@@ -48,51 +48,113 @@
   </div>
 </body>
 <script>
-let store = {}
-function loadData() {
-  let promise = d3.csv("./routes.csv")//TODO 1: Add the code to load the CSV file named "routes.csv" | 1 Line
-  return promise.then(routes => {
+  let store = {}
 
-    store.routes = routes//TODO 2: Save the routes into our store variable;
-    console.log(store);
-    return store;
-  })
-}
-// loadData();
-function groupByAirline(data) {
-  //Iterate over each route, producing a dictionary where the keys is
-  //are the ailines ids and the values are the information of the airline.
-  let result = data.reduce((result, d) => {
-    let currentData = result[d.AirlineID] || {
-      "AirlineID": d.AirlineID,
-      "AirlineName": d.AirlineName,
-      "Count": 0
+  function loadData() {
+    let promise = d3.csv("./routes.csv") //TODO 1: Add the code to load the CSV file named "routes.csv" | 1 Line
+    return promise.then(routes => {
+
+      store.routes = routes //TODO 2: Save the routes into our store variable;
+      console.log(store);
+      return store;
+    })
+  }
+  // loadData();
+  function groupByAirline(data) {
+    //Iterate over each route, producing a dictionary where the keys is
+    //are the ailines ids and the values are the information of the airline.
+    let result = data.reduce((result, d) => {
+      let currentData = result[d.AirlineID] || {
+        "AirlineID": d.AirlineID,
+        "AirlineName": d.AirlineName,
+        "Count": 0
+      }
+
+      currentData.Count += 1 //TODO: Increment the count (number of routes) of ariline.
+
+      result[d.AirlineID] = currentData //TODO: Save the updated information in the dictionary using the airline id as key.
+
+      return result;
+    }, {})
+
+    //We use this to convert the dictionary produced by the code above, into a list, that will make it easier to create the visualization.
+    result = Object.keys(result).map(key => result[key])
+    result = result.sort((a, b) => {
+      return d3.descending(a.Count, b.Count);
+    }) //TODO: Sort the data in descending order of count.
+
+    return result
+  }
+
+  function getAirlinesChartConfig() {
+    let width = 350;
+    let height = 400;
+    let margin = {
+      top: 10,
+      bottom: 50,
+      left: 130,
+      right: 10
     }
+    //The body is the are that will be occupied by the bars.
+    let bodyHeight = height - margin.top - margin.bottom
+    let bodyWidth = width - margin.left - margin.right //TODO: Compute the width of the body by subtracting the left and right margins from the width.
 
-    currentData.Count += 1 //TODO: Increment the count (number of routes) of ariline.
+    //The container is the SVG where we will draw the chart. In our HTML is the svg ta with the id AirlinesChart
+    let container = d3.select('#AirlinesChart') //TODO: use d3.select to select the element with id AirlinesChart
+    container
+      .attr("width", width)
+      .attr("height", height)
+    //TODO: Set the height of the container
 
-    result[d.AirlineID] = currentData//TODO: Save the updated information in the dictionary using the airline id as key.
+    return {
+      width,
+      height,
+      margin,
+      bodyHeight,
+      bodyWidth,
+      container
+    }
+  }
 
-    return result;
-  }, {})
+  function getAirlinesChartScales(airlines, config) {
+    let {
+      bodyWidth,
+      bodyHeight
+    } = config;
+    let maximumCount = d3.max(airlines.map(a => a.Count)) //TODO: Use d3.max to get the highest Count value we have on the airlines list.
 
-  //We use this to convert the dictionary produced by the code above, into a list, that will make it easier to create the visualization.
-  result = Object.keys(result).map(key => result[key])
-  result = result.sort((a,b) => {
-    return d3.descending(a.Count,b.Count);
-  })//TODO: Sort the data in descending order of count.
+    let xScale = d3.scaleLinear()
+      .range([0, bodyWidth])
+      .domain([0, maximumCount])
+    //TODO: Set the range to go from 0 to the width of the body
+    //TODO: Set the domain to go from 0 to the maximun value fount for the field 'Count'
 
-  return result
-}
+    let yScale = d3.scaleBand()
+      .range([0, bodyHeight])
+      .domain(airlines.map(a => a.AirlineName)) //The domain is the list of ailines names
+      .padding(0.2)
 
-function showData() {
-  //Get the routes from our store variable
-  let routes = store.routes
-  // Compute the number of routes per airline.
-  let airlines = groupByAirline(store.routes);
-  console.log(airlines)
-}
-loadData().then(showData);
-// All your javascript code will go here
+    return {
+      xScale,
+      yScale
+    }
+  }
+
+  function drawAirlinesChart(airlines) {
+    let config = getAirlinesChartConfig()
+  }
+
+  function showData() {
+    //Get the routes from our store variable
+    let routes = store.routes
+    // Compute the number of routes per airline.
+    let airlines = groupByAirline(store.routes);
+    console.log(airlines)
+    // Draw airlines barchart
+    drawAirlinesChart(airlines)
+  }
+  loadData().then(showData);
+  // All your javascript code will go here
 </script>
+
 </html>
