--- a/a_Coursera_NYU_D3_Assignment/index.html
+++ b/a_Coursera_NYU_D3_Assignment/index.html
@@ -51,13 +51,115 @@
   let store = {}
 
   function loadData() {
-    let promise = d3.csv("./routes.csv") //TODO 1: Add the code to load the CSV file named "routes.csv" | 1 Line
-    return promise.then(routes => {
-
-      store.routes = routes //TODO 2: Save the routes into our store variable;
-      console.log(store);
+    return Promise.all([
+      d3.csv("routes.csv"),
+      d3.json("countries.geo.json"),
+    ]).then(datasets => {
+      store.routes = datasets[0];
+      store.geoJSON = datasets[1]
       return store;
     })
+  }
+
+  function getMapProjection(config) {
+    let {
+      width,
+      height
+    } = config;
+    let projection = d3.geoMercator() //TODO: Create a projection of type Mercator.
+    projection.scale(97)
+      .translate([width / 2, height / 2 + 20])
+
+    store.mapProjection = projection;
+    return projection;
+  }
+
+  function drawBaseMap(container, countries, projection) {
+    let path = d3.geoPath().projection(projection) //TODO: create a geoPath generator and set its projection to be the projection passed as parameter.
+
+    container.selectAll("path").data(countries)
+      .enter().append("path")
+      .attr("d", d => path(d)) //TODO: use the path generator to draw each country )
+      .attr("stroke", "#ccc")
+      .attr("fill", "#eee")
+  }
+
+  function getMapConfig() {
+    let width = 600;
+    let height = 400;
+    let container = d3.select("#Map")
+      .attr("width", width)
+      .attr("height", height) //TODO: select the svg with id Map
+    //TODO: set the width and height of the conatiner to be equal the width and height variables.
+    return {
+      width,
+      height,
+      container
+    }
+  }
+
+  function drawMap(geoJeon) {
+    let config = getMapConfig();
+    let projection = getMapProjection(config)
+    drawBaseMap(config.container, geoJeon.features, projection)
+  }
+
+  function groupByAirport(data) {
+    //We use reduce to transform a list into a object where each key points to an aiport. This way makes it easy to check if is the first time we are seeing the airport.
+    let result = data.reduce((result, d) => {
+      //The || sign in the line below means that in case the first option is anything that Javascript consider false (this insclude undefined, null and 0), the second option will be used. Here if result[d.DestAirportID] is false, it means that this is the first time we are seeing the airport, so we will create a new one (second part after ||)
+
+      let currentDest = result[d.DestAirportID] || {
+        "AirportID": d.DestAirportID,
+        "Airport": d.DestAirport,
+        "Latitude": +d.DestLatitude,
+        "Longitude": +d.DestLongitude,
+        "City": d.DestCity,
+        "Country": d.DestCountry,
+        "Count": 0
+      }
+      currentDest.Count += 1
+      result[d.DestAirportID] = currentDest
+
+      //After doing for the destination airport, we also update the airport the airplane is departing from.
+      let currentSource = result[d.SourceAirportID] || {
+        "AirportID": d.SourceAirportID,
+        "Airport": d.SourceAirport,
+        "Latitude": +d.SourceLatitude,
+        "Longitude": +d.SourceLongitude,
+        "City": d.SourceCity,
+        "Country": d.SourceCountry,
+        "Count": 0
+      }
+      currentSource.Count += 1
+      result[d.SourceAirportID] = currentSource
+
+      return result
+    }, {})
+
+    //We map the keys to the actual ariorts, this is an way to transform the object we got in the previous step into a list.
+    result = Object.keys(result).map(key => result[key])
+    return result
+  }
+
+  function drawAirports(airports) {
+    let config = getMapConfig(); //get the config
+    let projection = getMapProjection(config) //get the projection
+    let container = config.container; //get the container
+
+    let circles = container.selectAll("circle")
+      .data(airports)
+      .enter()
+      .append("circle")
+      .attr("r", "1")
+      .attr("cx", d => projection([+d.Longitude, +d.Latitude])[0])
+      .attr("cy", d => projection([+d.Longitude, +d.Latitude])[1])
+    .attr("fill", "#2a5599")
+    //TODO: bind the airports to the circles using the .data method.
+    //TODO: for each new airport (hint: .enter)
+    //      - Set the radius to 1
+    //      - set the x and y position of the circle using the projection to convert longitude and latitude to x and y porision.
+    //      - Set the fill color of the circle to  "#2a5599"
   }
   // loadData();
   function groupByAirline(data) {
@@ -140,8 +242,67 @@
     }
   }
 
+  function drawBarsAirlinesChart(airlines, scales, config) {
+    let {
+      margin,
+      container
+    } = config; // this is equivalent to 'let margin = config.margin; let container = config.container'
+    let {
+      xScale,
+      yScale
+    } = scales
+
+    let body = container.append("g")
+      .style("transform",
+        `translate(${margin.left}px,${margin.top}px)`
+      )
+
+    let bars = body.selectAll(".bar")
+      .data(airlines)
+    //TODO: Use the .data method to bind the airlines to the bars (elements with class bar)
+
+    //Adding a rect tag for each airline
+    bars.enter().append("rect")
+      .attr("height", yScale.bandwidth())
+      .attr("y", (d) => yScale(d.AirlineName))
+      .attr("width", (d) => xScale(d.Count))
+      //TODO: set the width of the bar to be proportional to the airline count using the xScale
+      .attr("fill", "#2a5599")
+  }
+
+  function drawAxesAirlinesChart(airlines, scales, config) {
+    let {
+      xScale,
+      yScale
+    } = scales
+    let {
+      container,
+      margin,
+      height
+    } = config;
+    let axisX = d3.axisBottom(xScale)
+      .ticks(5)
+
+    container.append("g")
+      .style("transform",
+        `translate(${margin.left}px,${height - margin.bottom}px)`
+      )
+      .call(axisX)
+
+    let axisY = d3.axisLeft(yScale) //TODO: Create an axis on the left for the Y scale
+
+    container.append("g")
+      .style("transform",
+        `translate(${margin.left}px, ${margin.top}px)`)
+      .call(axisY)
+    //TODO: Append a g tag to the container, translate it based on the margins and call the axisY axis to draw the left axis.
+  }
+
   function drawAirlinesChart(airlines) {
-    let config = getAirlinesChartConfig()
+    let config = getAirlinesChartConfig();
+    let scales = getAirlinesChartScales(airlines, config);
+    drawBarsAirlinesChart(airlines, scales, config);
+    drawAxesAirlinesChart(airlines, scales, config);
   }
 
   function showData() {
@@ -150,8 +311,11 @@
     // Compute the number of routes per airline.
     let airlines = groupByAirline(store.routes);
     console.log(airlines)
-    // Draw airlines barchart
     drawAirlinesChart(airlines)
+    drawMap(store.geoJSON)
+
+    let airports = groupByAirport(store.routes);
+    drawAirports(airports)
   }
   loadData().then(showData);
   // All your javascript code will go here
