--- a/a_Coursera_NYU_D3_Assignment/index.html
+++ b/a_Coursera_NYU_D3_Assignment/index.html
@@ -154,7 +154,7 @@
       .attr("r", "1")
       .attr("cx", d => projection([+d.Longitude, +d.Latitude])[0])
       .attr("cy", d => projection([+d.Longitude, +d.Latitude])[1])
-    .attr("fill", "#2a5599")
+      .attr("fill", "#2a5599")
     //TODO: bind the airports to the circles using the .data method.
     //TODO: for each new airport (hint: .enter)
     //      - Set the radius to 1
@@ -259,6 +259,11 @@
 
     let bars = body.selectAll(".bar")
       .data(airlines)
+      .attr("fill", "#2a5599")
+
+    //TODO: Add another listener, this time for mouseleave
+    //TODO: In this listener, call drawRoutes(null), this will cause the function to remove all lines in the chart since there is no airline withe AirlineID == null.
+    //TODO: change the fill color of the bar back to "#2a5599"
     //TODO: Use the .data method to bind the airlines to the bars (elements with class bar)
 
     //Adding a rect tag for each airline
@@ -268,6 +273,20 @@
       .attr("width", (d) => xScale(d.Count))
       //TODO: set the width of the bar to be proportional to the airline count using the xScale
       .attr("fill", "#2a5599")
+      .on("mouseenter", function(d) { // <- this is the new code
+        drawRoutes(d.AirlineID)
+        d3.select(this)
+          .attr("fill", "#992a5b")
+        //TODO: call the drawRoutes function passing the AirlineID id 'd'
+        //TODO: change the fill color of the bar to "#992a5b" as a way to highlight the bar. Hint: use d3.select(this)
+      })
+      .on("mouseleave", function(d) {
+        drawRoutes(null)
+        d3.select(this)
+          .attr("fill", "#2a5599")
+
+      })
+      .data(airlines)
   }
 
   function drawAxesAirlinesChart(airlines, scales, config) {
@@ -298,11 +317,41 @@
     //TODO: Append a g tag to the container, translate it based on the margins and call the axisY axis to draw the left axis.
   }
 
+  function drawRoutes(airlineID) {
+    let routes = store.routes //TODO: get the routes from store
+    let projection = store.mapProjection //TODO: get the projection from the store
+    let container = d3.select("#Map") //TODO: select the svg with id "Map" (our map container)
+    let selectedRoutes = routes.filter(d => d.AirlineID === airlineID) //TODO: filter the routes to keep only the routes which AirlineID is equal to the parameter airlineID received by the function
+
+    let bindedData = container.selectAll("line")
+      .data(selectedRoutes, d => d.ID)
+      .enter()
+      .append("line")
+      .attr("x1", d => projection([+d.SourceLongitude, +d.SourceLatitude])[0])
+      .attr("y1", d => projection([+d.SourceLongitude, +d.SourceLatitude])[1])
+      .attr("x2", d => projection([+d.DestLongitude, +d.DestLatitude])[0])
+      .attr("y2", d => projection([+d.DestLongitude, +d.DestLatitude])[1])
+      .attr("stroke", "#992a2a")
+      .attr("opacity", "0.1")
+
+
+    container.selectAll("line").data(selectedRoutes).exit().remove();
+    //TODO: Use the .enter selector to append a line for each new route.
+    //TODO: for each line set the start of the line (x1 and y1) to be the position of the source airport (SourceLongitude and SourceLatitude) Hint: you can use projection to convert longitude and latitude to x and y.
+    //TODO: for each line set the end of the line (x2 and y2) to be the position of the source airport (DestLongitude and DestLongitude)
+
+    //TODO: set the color of the stroke of the line to "#992a2a"
+    //TODO: set the opacity to 0.1
+
+    //TODO: use exit function over bindedData to remove any routes that does not satisfy the filter.
+  }
+
   function drawAirlinesChart(airlines) {
     let config = getAirlinesChartConfig();
     let scales = getAirlinesChartScales(airlines, config);
     drawBarsAirlinesChart(airlines, scales, config);
     drawAxesAirlinesChart(airlines, scales, config);
+
   }
 
   function showData() {
@@ -310,12 +359,14 @@
     let routes = store.routes
     // Compute the number of routes per airline.
     let airlines = groupByAirline(store.routes);
-    console.log(airlines)
+
     drawAirlinesChart(airlines)
     drawMap(store.geoJSON)
 
     let airports = groupByAirport(store.routes);
-    drawAirports(airports)
+    // drawAirports(airports)
+
+    drawRoutes("24") // <- add this line
   }
   loadData().then(showData);
   // All your javascript code will go here
